force-app/main/default/objects/Analitica__c/fields/MES__c.field-meta.xml
<CustomField>
    <fullName>MES__c</fullName>
    <formula>TEXT(MONTH( Fecha__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MES</label>
    <type>Text</type>
</CustomField>