force-app/main/default/objects/Analitica__c/fields/Mi_area__c.field-meta.xml
<CustomField>
    <fullName>Mi_area__c</fullName>
    <formula>TEXT( $User.Area__c) = TEXT( Consejo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mi_area</label>
    <type>Checkbox</type>
</CustomField>