force-app/main/default/objects/Analitica__c/fields/Mi_Gerencia__c.field-meta.xml
<CustomField>
    <fullName>Mi_Gerencia__c</fullName>
    <formula>TEXT($User.Gerencia__c)= TEXT(Clan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mi_Gerencia</label>
    <type>Checkbox</type>
</CustomField>