force-app/main/default/objects/Analitica__c/fields/MiembroDeMiEquipo__c.field-meta.xml
<CustomField>
    <fullName>MiembroDeMiEquipo__c</fullName>
    <formula>$User.Id = Propietario__r.Manager__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiembroDeMiEquipo</label>
    <type>Checkbox</type>
</CustomField>