force-app/main/default/objects/Analitica__c/fields/MiSede__c.field-meta.xml
<CustomField>
    <fullName>MiSede__c</fullName>
    <formula>TEXT($User.Sede__c )= Sede_Venta__r.Sede_Analitica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiSede</label>
    <type>Checkbox</type>
</CustomField>