force-app/main/default/objects/Analitica__c/fields/Must_Win__c.field-meta.xml
<CustomField>
    <fullName>Must_Win__c</fullName>
    <formula>if(RecordType.Name =&apos;ForecastDeLinea&apos; ,Oportunidad__r.Must_Win__c,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Must Win</label>
    <type>Checkbox</type>
</CustomField>