force-app/main/default/objects/Analitica__c/fields/New_Interco__c.field-meta.xml
<CustomField>
    <fullName>New_Interco__c</fullName>
    <formula>if(AND (Cuenta__r.Cuenta_Interna__c=True,Cuenta__r.GSO_Region__c != Sede_Venta__r.GSO_Region__c ),&apos;Offshore Interco&apos;,
if( Cuenta__r.Cuenta_Interna__c=True,&apos;All Interco&apos;,&apos;Directo&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Interco</label>
    <type>Text</type>
</CustomField>