force-app/main/default/objects/Analitica__c/fields/NiSerbaticNiBarcelona__c.field-meta.xml
<CustomField>
    <fullName>NiSerbaticNiBarcelona__c</fullName>
    <formula>IF( OR( CONTAINS(Sede_Venta__r.Name , &apos;Barcelona&apos;) ,CONTAINS(Sede_Venta__r.Name , &apos;SERBATIC&apos;)) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NiSerbaticNiBarcelona</label>
    <type>Checkbox</type>
</CustomField>