force-app/main/default/objects/Analitica__c/fields/NoAparecerForecastTopAccounts__c.field-meta.xml
<CustomField>
    <fullName>NoAparecerForecastTopAccounts__c</fullName>
    <formula>if( AND( Agrupacion_Importes_TOP_Accountas__c==&apos;Forecast 2022&apos;,  Importe_Convertido__c=0) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NoAparecerForecastTopAccounts</label>
    <type>Checkbox</type>
</CustomField>