force-app/main/default/objects/Analitica__c/fields/NoAparecerPresuTopAccounts__c.field-meta.xml
<CustomField>
    <fullName>NoAparecerPresuTopAccounts__c</fullName>
    <formula>if( AND( Agrupacion_Importes_TOP_Accountas__c==&apos;Presupuesto 2021&apos;,  Presupuesto__c =0),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NoAparecerPresuTopAccounts</label>
    <type>Checkbox</type>
</CustomField>