force-app/main/default/objects/Analitica__c/fields/NoAparecerTopAccounts__c.field-meta.xml
<CustomField>
    <fullName>NoAparecerTopAccounts__c</fullName>
    <formula>if( AND( Agrupacion_Importes_TOP_Accountas__c==&apos;Cierre 2020&apos;,  Ingresos_Reales__c =0),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NoAparecerCierreTopAccounts</label>
    <type>Checkbox</type>
</CustomField>