force-app/main/default/objects/Analitica__c/fields/Nomber_propietario_formated__c.field-meta.xml
<CustomField>
    <fullName>Nomber_propietario_formated__c</fullName>
    <formula>Propietario__r.LastName +&apos;,&apos;+ Propietario__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nomber propietario formated</label>
    <type>Text</type>
</CustomField>