force-app/main/default/objects/Analitica__c/fields/Nombre_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cuenta__c</fullName>
    <formula>Cuenta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Cuenta</label>
    <type>Text</type>
</CustomField>