force-app/main/default/objects/Analitica__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <formula>1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>