force-app/main/default/objects/Analitica__c/fields/Oportunidad_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Relacionada__c</fullName>
    <formula>if( Isblank(Oportunidad__r.Oportunidad_Relacionada__r.Name)  ,&apos;NEW BUISNESS&apos;,&apos;EXISTING BUISNESS&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidad Relacionada</label>
    <type>Text</type>
</CustomField>