force-app/main/default/objects/Analitica__c/fields/Opp_cerrada__c.field-meta.xml
<CustomField>
    <fullName>Opp_cerrada__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Tipo__c,&apos;ForecastDeLinea&apos;),
        ISPICKVAL(Tipo__c,&apos;ForecastDeOportunidades&apos;)
    ),
    IF(
        NOT(ISBLANK(Oportunidad__c)) &amp;&amp;  IsFramework__c ==false,
        Oportunidad__r.IsClosed,
        IF(
            NOT(ISBLANK(Linea_de_Proyecto__c)&amp;&amp; IsFramework__c ==false),
            Linea_de_Proyecto__r.Oportunidad__r.IsClosed,
            FALSE
        )
    ),
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp cerrada</label>
    <type>Checkbox</type>
</CustomField>