force-app/main/default/objects/Analitica__c/fields/Opp_Ganada__c.field-meta.xml
<CustomField>
    <fullName>Opp_Ganada__c</fullName>
    <formula>IF( 
ISPICKVAL(Tipo__c,&apos;Forecast&apos;), 
IF(NOT(ISBLANK(Oportunidad__c)),ISPICKVAL(Oportunidad__r.StageName,&apos;Ganada&apos;), 
IF(NOT(ISBLANK(Linea_de_Proyecto__c)),ISPICKVAL(Linea_de_Proyecto__r.Oportunidad__r.StageName,&apos;Ganada&apos;),FALSE)), 
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Ganada</label>
    <type>Checkbox</type>
</CustomField>