force-app/main/default/objects/Analitica__c/fields/Origen_Analitica__c.field-meta.xml
<CustomField>
    <fullName>Origen_Analitica__c</fullName>
    <formula>if(RecordType.Name==&apos;Backlog&apos;,&apos;Backlog&apos; ,

if(RecordType.Name==&apos;Cierre&apos;,&apos;Cierre&apos;,

if(RecordType.Name==&apos;ForecastDeLinea&apos;, &apos;Forecast&apos;,

if(RecordType.Name==&apos;Presupuesto&apos;,&apos;Presupuesto&apos;,&apos;null&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen Analítica</label>
    <type>Text</type>
</CustomField>