force-app/main/default/objects/Analitica__c/fields/Poryecto_Extrategico__c.field-meta.xml
<CustomField>
    <fullName>Poryecto_Extrategico__c</fullName>
    <formula>OR( Proyecto_Estrategico__c ==true, Oportunidad__r.Proyecto_estrategico__c ==true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proyecto Estratégico</label>
    <type>Checkbox</type>
</CustomField>