force-app/main/default/objects/Analitica__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <label>Presupuesto_Ingreso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>