force-app/main/default/objects/Analitica__c/fields/Presupuesto_Coste__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Coste__c</fullName>
    <label>Presupuesto_Coste</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>