force-app/main/default/objects/Analitica__c/fields/Presupuesto_Coste_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Coste_Convertido__c</fullName>
    <formula>if( $User.Divisa__c = TEXT( CurrencyIsoCode ) ,  Presupuesto_Coste__c  ,(Presupuesto_Coste__c/ CURRENCYRATE( TEXT(CurrencyIsoCode ) )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presupuesto_Coste_Convertido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>