force-app/main/default/objects/Analitica__c/fields/Presupuesto_Ingreso_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Ingreso_Convertido__c</fullName>
    <formula>if( $User.Divisa__c = TEXT( CurrencyIsoCode ) , Presupuesto__c ,if( TEXT(CurrencyIsoCode )==&apos;MXN&apos;,(Presupuesto__c  /25.15 ),
if( TEXT(CurrencyIsoCode )==&apos;COP&apos;,(Presupuesto__c  /4400),
if( TEXT(CurrencyIsoCode )==&apos;PEN&apos;,(Presupuesto__c  /4.20 ),
if( TEXT(CurrencyIsoCode )==&apos;CLP&apos;,(Presupuesto__c  /919.00 ),
if( TEXT(CurrencyIsoCode )==&apos;GBP&apos;,(Presupuesto__c  /0.86 ),
(Presupuesto__c / CURRENCYRATE( TEXT(CurrencyIsoCode )
))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presupuesto_Ingreso_Convertido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>