force-app/main/default/objects/Analitica__c/fields/Probabilidad__c.field-meta.xml
<CustomField>
    <fullName>Probabilidad__c</fullName>
    <formula>IF(NOT(ISBLANK( Linea_de_Proyecto__c )),Linea_de_Proyecto__r.Oportunidad__r.Probability,
IF(NOT(ISBLANK( Oportunidad__c)), Oportunidad__r.Probability,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probabilidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>