force-app/main/default/objects/Analitica__c/fields/Propietario__c.field-meta.xml
<CustomField>
    <fullName>Propietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Analiticas</relationshipName>
    <type>Lookup</type>
</CustomField>