force-app/main/default/objects/Analitica__c/fields/Propietario_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Propietario_Cuenta__c</fullName>
    <formula>Cuenta__r.Owner.FirstName + &apos; &apos;+ Cuenta__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario Cuenta</label>
    <type>Text</type>
</CustomField>