force-app/main/default/objects/Analitica__c/fields/Propietarios__c.field-meta.xml
<CustomField>
    <fullName>Propietarios__c</fullName>
    <formula>Propietario__r.FirstName + &apos; &apos; + Propietario__r.LastName +  BR() +  IF( ISBLANK(Propietarios_Multibooking__c) ,&apos;&apos;,  Propietarios_Multibooking__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietarios</label>
    <type>Text</type>
</CustomField>