force-app/main/default/objects/Analitica__c/fields/Proyecto_Estrategico__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_Estrategico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agrupacion Proyecto Estratégico</label>
    <type>Checkbox</type>
</CustomField>