force-app/main/default/objects/Analitica__c/fields/Ratio_Conversion_Divisa_CLP__c.field-meta.xml
<CustomField>
    <fullName>Ratio_Conversion_Divisa_CLP__c</fullName>
    <formula>CURRENCYRATE(&apos;CLP&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratio Conversion Divisa CLP</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>