force-app/main/default/objects/Analitica__c/fields/Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Margin__c</fullName>
    <formula>if(Presupuesto__c!=0,((Presupuesto__c-Presupuesto_Coste__c)/Presupuesto__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>