force-app/main/default/objects/Analitica__c/fields/Sectores__c.field-meta.xml
<CustomField>
    <fullName>Sectores__c</fullName>
    <label>Sectores</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A.Pub-Admin. Pública</fullName>
            </value>
            <value>
                <fullName>Banca-Banca</fullName>
            </value>
            <value>
                <fullName>Energía</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Estruct.-Estructura</fullName>
            </value>
            <value>
                <fullName>Industria-Industria</fullName>
            </value>
            <value>
                <fullName>Seguros-Seguros</fullName>
            </value>
            <value>
                <fullName>Telco-Media</fullName>
            </value>
            <value>
                <fullName>Telco-Telco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>