force-app/main/default/objects/Analitica__c/fields/Sede_Venta__c.field-meta.xml
<CustomField>
    <fullName>Sede_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sede Venta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Analíticas (Sede Venta)</relationshipLabel>
    <relationshipName>Anal_ticas</relationshipName>
    <type>Lookup</type>
</CustomField>