force-app/main/default/objects/Analitica__c/fields/Soy_propietario__c.field-meta.xml
<CustomField>
    <fullName>Soy_propietario__c</fullName>
    <formula>CONTAINS(Propietarios_Multibooking__c, ($User.FirstName +&apos; &apos;+  $User.LastName)) ||  $User.Id = Propietario__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soy propietario</label>
    <type>Checkbox</type>
</CustomField>