force-app/main/default/objects/Analitica__c/fields/SW_Vendor__c.field-meta.xml
<CustomField>
    <fullName>SW_Vendor__c</fullName>
    <formula>if(text( Linea_de_Proyecto__r.Fabricantes__c )!=null, text( Linea_de_Proyecto__r.Fabricantes__c ), sw_vendor_text__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SW Vendor</label>
    <type>Text</type>
</CustomField>