force-app/main/default/objects/Analitica__c/fields/sw_vendor_text__c.field-meta.xml
<CustomField>
    <fullName>sw_vendor_text__c</fullName>
    <label>sw vendor text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>