force-app/main/default/objects/Analitica__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cierre</fullName>
                <color>#57F17C</color>
                <label>Cierre</label>
            </value>
            <value>
                <fullName>Backlog</fullName>
                <color>#2F5D85</color>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>ForecastDeLinea</fullName>
                <color>#B6E32E</color>
                <label>ForecastDeLinea</label>
            </value>
            <value>
                <fullName>ForecastDeOportunidades</fullName>
                <color>#FF6600</color>
                <label>ForecastDeOportunidades</label>
            </value>
            <value>
                <fullName>Presupuesto</fullName>
                <color>#FF99FF</color>
                <label>Presupuesto</label>
            </value>
            <value>
                <fullName>ForecastImporteTotal_Presupuesto</fullName>
            </value>
            <value>
                <fullName>ForecastImporteXprob_Presupuesto</fullName>
            </value>
            <value>
                <fullName>Backlog Temporal</fullName>
                <color>#3366FF</color>
                <label>Backlog Temporal</label>
            </value>
            <value>
                <fullName>Pipeline</fullName>
                <color>#FF6600</color>
                <label>Pipeline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>