force-app/main/default/objects/Analitica__c/fields/Tipo_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Proyecto__c</fullName>
    <label>Tipo de Proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Llave en Mano</fullName>
            </value>
            <value>
                <fullName>Licencias</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>Venta de licencias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>