force-app/main/default/objects/Analitica__c/fields/Tipo_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Proyecto__c</fullName>
    <label>Tipo Proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_proyecto</valueSetName>
    </valueSet>
</CustomField>