force-app/main/default/objects/Analitica__c/fields/TipodeproyectoLP__c.field-meta.xml
<CustomField>
    <fullName>TipodeproyectoLP__c</fullName>
    <formula>Linea_de_Proyecto__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de proyecto LP</label>
    <type>Text</type>
</CustomField>