force-app/main/default/objects/Analitica__c/fields/Venta_Extra__c.field-meta.xml
<CustomField>
    <fullName>Venta_Extra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venta Extra</label>
    <type>Checkbox</type>
</CustomField>