force-app/main/default/objects/Analitica__c/fields/Venta_Extra_agrupacion__c.field-meta.xml
<CustomField>
    <fullName>Venta_Extra_agrupacion__c</fullName>
    <formula>OR(Venta_Extra__c==TRUE, Linea_de_Proyecto__r.Venta_Extraordinaria__c==true, Oportunidad__r.Proyecto_extraordinario__c==true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrupacion Venta Extra</label>
    <type>Checkbox</type>
</CustomField>