force-app/main/default/objects/Analitica__c/recordTypes/Backlog.recordType-meta.xml
<RecordType>
    <fullName>Backlog</fullName>
    <active>true</active>
    <label>Backlog</label>
</RecordType>