force-app/main/default/objects/Analitica__c/recordTypes/Backlog_temporal.recordType-meta.xml
<RecordType>
    <fullName>Backlog_temporal</fullName>
    <active>false</active>
    <label>Backlog temporal</label>
</RecordType>