force-app/main/default/objects/Analitica__c/recordTypes/ForecastDeOportunidades.recordType-meta.xml
<RecordType>
    <fullName>ForecastDeOportunidades</fullName>
    <active>true</active>
    <description>IMPXPROB</description>
    <label>ForecastDeOportunidades</label>
</RecordType>