force-app/main/default/objects/Analitica__c/recordTypes/ForecastImporteTotal_Presupuesto.recordType-meta.xml
<RecordType>
    <fullName>ForecastImporteTotal_Presupuesto</fullName>
    <active>true</active>
    <label>Pipeline</label>
</RecordType>