force-app/main/default/objects/Analitica__c/recordTypes/Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Pipeline</fullName>
    <active>true</active>
    <label>Pipeline2</label>
</RecordType>